--- a/tests/TestVectors/Makefile
+++ b/tests/TestVectors/Makefile
@@ -1,5 +1,6 @@
 test_vectors: *.cpp *.h
-	g++ -g -ggdb --std=c++14 -o test_vectors -I../../include/ *.cpp \
+	g++ -g -ggdb --std=c++14 -o test_vectors -I../../include/ \
+	base64.cpp do_decrypt.cpp do_encrypt.cpp parse_encrypt.cpp parse_keys.cpp test_vectors.cpp \
 	-I/opt/homebrew/include/ -L/opt/homebrew/lib/ \
 	-I../../install/include/ -L../../install/lib/ -I ../../aws-encryption-sdk-cpp/include/ \
 	../../build-aws-encryption-sdk-c/Debug/libaws-encryption-sdk.dylib \
@@ -10,12 +11,15 @@ test_vectors: *.cpp *.h
 	install_name_tool -add_rpath ../../install/lib/ test_vectors
 
 decrypt_dafny: test_vectors
-	./test_vectors decrypt --manifest-path ./from-dafny --manifest-name decrypt-manifest.json
+	./test_vectors decrypt --manifest-path ./from-dafny --manifest-name decrypt-manifest.json || exit 1
 
 encrypt: test_vectors
 	rm -rf local
 	mkdir -p local
-	./test_vectors encrypt --manifest-path ./from-dafny --decrypt-manifest-path ./local
+	./test_vectors encrypt --manifest-path ./from-dafny --decrypt-manifest-path ./local || exit 1
 
 decrypt: test_vectors
-	./test_vectors decrypt --manifest-path ./local --manifest-name decrypt-manifest.json
+	./test_vectors decrypt --manifest-path ./local --manifest-name decrypt-manifest.json || exit 1
+
+clean:
+	rm -f test_vectors
