--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -24,6 +24,10 @@ jobs:
         if: matrix.os != 'ubuntu-22.04'
         run: brew install ${{ matrix.openssl_version }}
 
+      - name: Install LibCurl
+        if: matrix.os == 'ubuntu-22.04'
+        run: sudo apt-get install libcurl4-openssl-dev
+
       - name: Checkout PR
         uses: actions/checkout@v4
         with:
