--- a/tests/TestVectors/Makefile
+++ b/tests/TestVectors/Makefile
@@ -10,6 +10,13 @@ test_vectors: *.cpp *.h
 	install_name_tool -add_rpath ../../build-aws-encryption-sdk-c/aws-encryption-sdk-cpp/Debug/ test_vectors
 	install_name_tool -add_rpath ../../install/lib/ test_vectors
 
+test_vectors_unix: *.cpp *.h
+	g++ -g -ggdb --std=c++14 -o test_vectors -I../../include/ *.cpp \
+	-I/opt/homebrew/include/ -L/opt/homebrew/lib/ \
+	-I../../install/include/ -L../../install/lib/ -I ../../aws-encryption-sdk-cpp/include/ \
+	../../build-aws-encryption-sdk-c/Debug/libaws-encryption-sdk.dylib \
+	../../build-aws-encryption-sdk-c/aws-encryption-sdk-cpp/Debug/libaws-encryption-sdk-cpp.dylib \
+
 decrypt_dafny: test_vectors
 	./test_vectors decrypt --manifest-path ./from-dafny --manifest-name decrypt-manifest.json || exit 1
 
