--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         # macos-latest-large is the latest intel based runner
-        os: [macos-13, macos-latest-large]
+        os: [macos-13, macos-latest-large, ubuntu-22.04]
         openssl_version: [openssl@1.1]
 
     permissions:
