--- a/tests/TestVectors/Makefile
+++ b/tests/TestVectors/Makefile
@@ -11,11 +11,15 @@ test_vectors: *.cpp *.h
 	install_name_tool -add_rpath ../../install/lib/ test_vectors
 
 test_vectors_unix: *.cpp *.h
-	g++ -g -ggdb --std=c++17 -o test_vectors -I../../include/ *.cpp \
-	-I/opt/homebrew/include/ -L/opt/homebrew/lib/ \
+	pwd
+	ls ../..
+	ls ../../install
+	ls ../../install/lib/
+	g++ -g -ggdb --std=c++17 -o test_vectors -I../../include/ \
+	base64.cpp do_decrypt.cpp do_encrypt.cpp parse_encrypt.cpp parse_keys.cpp test_vectors.cpp \
 	-I../../install/include/ -L../../install/lib/ -I ../../aws-encryption-sdk-cpp/include/ \
-	../../build-aws-encryption-sdk-c/Debug/libaws-encryption-sdk.dylib \
-	../../build-aws-encryption-sdk-c/aws-encryption-sdk-cpp/Debug/libaws-encryption-sdk-cpp.dylib \
+	-laws-encryption-sdk -laws-encryption-sdk-cpp \
+	-laws-cpp-sdk-core -laws-cpp-sdk-kms -laws-c-common -lcrypto
 
 decrypt_dafny: test_vectors
 	./test_vectors decrypt --manifest-path ./from-dafny --manifest-name decrypt-manifest.json || exit 1
