--- a/tests/TestVectors/Makefile
+++ b/tests/TestVectors/Makefile
@@ -11,10 +11,6 @@ test_vectors: *.cpp *.h
 	install_name_tool -add_rpath ../../install/lib/ test_vectors
 
 test_vectors_unix: *.cpp *.h
-	pwd
-	ls ../..
-	ls ../../install
-	ls ../../install/lib/
 	g++ -g -ggdb --std=c++17 -o test_vectors -I../../include/ \
 	base64.cpp do_decrypt.cpp do_encrypt.cpp parse_encrypt.cpp parse_keys.cpp test_vectors.cpp \
 	-I../../install/include/ -L../../install/lib/ -I ../../aws-encryption-sdk-cpp/include/ \
@@ -22,15 +18,15 @@ test_vectors_unix: *.cpp *.h
 	-laws-cpp-sdk-core -laws-cpp-sdk-kms -laws-c-common -lcrypto
 
 decrypt_dafny: test_vectors
-	./test_vectors decrypt --manifest-path ./from-dafny --manifest-name decrypt-manifest.json || exit 1
+	LD_LIBRARY_PATH=../../install/lib/ ./test_vectors decrypt --manifest-path ./from-dafny --manifest-name decrypt-manifest.json || exit 1
 
 encrypt: test_vectors
 	rm -rf local
 	mkdir -p local
-	./test_vectors encrypt --manifest-path ./from-dafny --decrypt-manifest-path ./local || exit 1
+	LD_LIBRARY_PATH=../../install/lib/ ./test_vectors encrypt --manifest-path ./from-dafny --decrypt-manifest-path ./local || exit 1
 
 decrypt: test_vectors
-	./test_vectors decrypt --manifest-path ./local --manifest-name decrypt-manifest.json || exit 1
+	LD_LIBRARY_PATH=../../install/lib/ ./test_vectors decrypt --manifest-path ./local --manifest-name decrypt-manifest.json || exit 1
 
 clean:
 	rm -f test_vectors
