--- a/.github/workflows/codebuild.yml
+++ b/.github/workflows/codebuild.yml
@@ -3,7 +3,7 @@ name: AWS CodeBuild Batch Workflow
 on:
   pull_request:
   push:
-  # Run once a day
+  # Run daily
   schedule:
     - cron: "0 0 * * *"
 
