--- a/.github/workflows/codebuild.yml
+++ b/.github/workflows/codebuild.yml
@@ -1,11 +1,7 @@
 name: AWS CodeBuild Batch Workflow
 
 on:
-  pull_request:
-  push:
-  # Run daily
-  schedule:
-    - cron: "0 0 * * *"
+  workflow_call:
 
 permissions:
   id-token: write
