--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -6,12 +6,16 @@ on:
 jobs:
   clang-format:
     uses: ./.github/workflows/clang-format.yml
+    secrets: inherit
   codebuild:
     uses: ./.github/workflows/codebuild.yml
+    secrets: inherit
   osx:
     uses: ./.github/workflows/osx.yml
+    secrets: inherit
   proof-ci:
     uses: ./.github/workflows/proof_ci.yaml
+    secrets: inherit
   pr-ci-all-required:
     if: always()
     needs:
