--- a/.github/workflows/daily_ci.yml
+++ b/.github/workflows/daily_ci.yml
@@ -9,3 +9,4 @@ jobs:
   codebuild:
     if: github.event_name != 'schedule' || github.repository_owner == 'aws'
     uses: ./.github/workflows/codebuild.yml
+    secrets: inherit
